@@ -70,13 +70,13 @@
     <deployedResource>
       <resourceUsage>InstanceUsesResource</resourceUsage>
       <requirementName>CIAO:PolicySet</requirementName>
-      <resourceName>test_policy_set_id</resourceName>
+      <resourceName>test_server_resource_id</resourceName>
       <resourceValue>
         <type>
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>test_server_resource_id</string>
+          <string>test_policy_set_id</string>
         </value>
       </resourceValue>
     </deployedResource>
